Besprechung 1. Oktober, mehrere kleine fixes